 - Fixed a bug in the string representation of CountDistinctAggregate
 - Fixed a bug related to losing FILTERS when building queries using the internal APIs
 - Fixed a bug related to ToString() form of some API built queries
 - Fixed a bug related to graph scoping of full text search
- Dependencies
 - Updated Json.Net dependency to 4.5r10
 - Updated Query.FullText Library to use Lucene.Net 3.0.3
- Build
 - Query.FullText Library is now always strong named
 - Query.FullText NuGet package now references Lucene.Net as a dependency instead of including it in the package
 - Data.Virtuoso NuGet package now references OpenLink.Data.Virtuoso as a dependency instead of including it in the package
- Parsing/Writing
 - Improved how parsers and writers are selected by file extension
 - Improved content negotiation logic to properly support quality factors and type ranges
 - Avoid using blocking IO when parsing from file/memory streams
- Query
 - Improved how Distinct() algebra behaves with respect to trimming temporary variables to better support complex property paths
 - Improved how GROUP BY, aggregates and Project Expressions are implemented internally
 - Improved parallel implementation of Left Join

Removed
- Marks the obsolete JosekiConnector as obsolete unusable
- Removed the obsolete TalisPlatformConnector
- Removed the obsolete IndexedTripleCollection and it's descendants
- Marks some obsolete property and class constants in ConfigurationLoader as obsolete unusable
- Removes the previously obsoleted property and class constants in ConfigurationLoader
- Marks the obsolete HashTable classes as obsolete unusable
- Marks the obsolete Graph() method of ITripleStore as obsolete unusable (superceded by indexer access)
- Marks the obsolete IndexingHelper static class as obsolete unusable
- Marks the obsolete ConfigurationLoader.AutoDetectX() overloads as obsolete unusable
- Marks the obsolete Tools.CopyStream() method as obsolete unusable
   



