@@ -54,8 +54,6 @@ namespace VDS.RDF.Test.Writing
         {
             new RdfXmlWriter(WriterCompressionLevel.High),
             new RdfXmlWriter(WriterCompressionLevel.High, false),
-            new FastRdfXmlWriter(WriterCompressionLevel.High),
-            new FastRdfXmlWriter(WriterCompressionLevel.High, false),
             new PrettyRdfXmlWriter(WriterCompressionLevel.High),
             new PrettyRdfXmlWriter(WriterCompressionLevel.High, false),
             new PrettyRdfXmlWriter(WriterCompressionLevel.High, true, false)
@@ -66,19 +64,11 @@ namespace VDS.RDF.Test.Writing
 
         private void CheckRoundTrip(IGraph g, IEnumerable<Type> exceptions)
         {
-            //Console.WriteLine("Original Triples:");
-            //foreach (Triple t in g.Triples)
-            //{
-            //    Console.WriteLine(t.ToString(this._formatter));
-            //}
-            //Console.WriteLine();
-
             foreach (IRdfWriter writer in this._writers)
             {
                 Console.WriteLine("Checking round trip with " + writer.GetType().Name);
                 System.IO.StringWriter strWriter = new System.IO.StringWriter();
                 writer.Save(g, strWriter);
-                //Console.WriteLine(strWriter.ToString());
                 Console.WriteLine();
 
                 Graph h = new Graph();
@@ -186,7 +176,7 @@ namespace VDS.RDF.Test.Writing
             INode o = g.CreateLiteralNode("&lt;tag>");
             g.Assert(s, p, o);
 
-            this.CheckRoundTrip(g, new Type[] { typeof(FastRdfXmlWriter) });
+            this.CheckRoundTrip(g, new Type[] { typeof(PrettyRdfXmlWriter) });
         }
 
         [TestMethod]
